--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
-    "nodemailer": "^6.7.8"
+    "nodemailer": "^6.7.8",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
