--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.38",
     "tsconfig-paths": "^4.1.0",
